--- a/src/Stateless/Stateless.csproj
+++ b/src/Stateless/Stateless.csproj
@@ -5,6 +5,8 @@
     <AssemblyTitle>Stateless</AssemblyTitle>
     <Product>Stateless</Product>
     <TargetFrameworks>netstandard2.0;net462;net6.0</TargetFrameworks>
+    <LangVersion>11</LangVersion>
+    <Features>strict</Features>
     <Description>Create state machines and lightweight state machine-based workflows directly in .NET code</Description>
     <Copyright>Copyright © Stateless Contributors 2009-$([System.DateTime]::Now.ToString(yyyy))</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
